fix text overflow past 3 dot menu: #6602

--- a/ui/scss/component/_livestream.scss
+++ b/ui/scss/component/_livestream.scss
@@ -314,7 +314,7 @@ $discussion-header__height: 3rem;
 }
 
 .livestream-comment__text {
-  padding-right: var(--spacing-xxs);
+  padding-right: var(--spacing-xl);
   padding-bottom: var(--spacing-xxs);
   .markdown-preview {
     p {
